--- a/unidad2.html
+++ b/unidad2.html
@@ -44,8 +44,8 @@
     <!-- <script defer src="js/noCopy.js"></script> -->
 
     <!--Script para la carga de los contenidos-->
-    <script defer src="js/cargaContenidos/unidad2.js"></script>
     <script defer src="js/cargaContenidos/tabsPositioning.js"></script>
+    <script defer src="js/cargaContenidos/unidad2.js"></script>
 
     <!--Tutorial interactivo-->
     <script defer src="js/driver.min.js"></script>
@@ -107,16 +107,17 @@
                         style="background-color: #BD6D77;">
                         <section id="lateralUnityMenu" class="lateralUnityMenu clw">
                             <div id="lateralUnityMenuSectionContainer" class="lateralUnityMenuSectionContainer">
-                                <a seccion-id="unidadCompetencia"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2">
-                                    <i seccion-id="unidadCompetencia" class="deskOption material-icons clbktx">extension</i>
-                                    <p seccion-id="unidadCompetencia" class="deskOption clbktx">Unidad de competencia</p>
+                                <a seccion-id="inicio"
+                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2 activeLinkOptionsContentUnit2"
+                                    id="a1tutorialButton">
+                                    <i class="deskOption material-icons clbktx">school</i>
+                                    <p class="deskOption clbktx">Inicio</p>
                                 </a>
-                                
-                                <a seccion-id="evaluacionAprendizajes"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2">
-                                    <i seccion-id="evaluacionAprendizajes" class="deskOption material-icons clbktx">assessment</i>
-                                    <p seccion-id="evaluacionAprendizajes" class="deskOption clbktx">Evaluación de los aprendizajes</p>
+
+                                <a class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                    id="a10tutorialButton" href="manual.html">
+                                    <i class="deskOption material-icons clbktx">sos</i>
+                                    <p class="deskOption clbktx">Manual de usuario</p>
                                 </a>
 
                                 <ul id="a2tutorialButton" class="collapsible clgreyl2 border1 shadow2">
@@ -164,31 +165,51 @@
                                     </li>
                                 </ul>
 
-
-                                <a seccion-id=""
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                <a class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a9tutorialButton" href="SuperGlosario.html">
-                                    <i seccion-id="" class="deskOption material-icons clbktx">library_books</i>
-                                    <p seccion-id="" class="deskOption clbktx">Glosario</p>
+                                    <i class="deskOption material-icons clbktx">library_books</i>
+                                    <p class="deskOption clbktx">Glosario</p>
                                 </a>
+
                                 <a seccion-id="materialApoyo"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a3tutorialButton">
-                                    <i seccion-id="materialApoyo" class="deskOption material-icons clbktx">auto_stories</i>
-                                    <p seccion-id="materialApoyo" class="deskOption clbktx">Material de apoyo</p>
+                                    <i class="deskOption material-icons clbktx">auto_stories</i>
+                                    <p class="deskOption clbktx">Material de apoyo</p>
                                 </a>
+
                                 <a seccion-id="actividadesAprendizaje"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a4tutorialButton">
-                                    <i seccion-id="actividadesAprendizaje" class="deskOption material-icons clbktx">fitness_center</i>
-                                    <p seccion-id="actividadesAprendizaje" class="deskOption clbktx">Actividades de aprendizaje</p>
+                                    <i class="deskOption material-icons clbktx">fitness_center</i>
+                                    <p class="deskOption clbktx">Actividades de aprendizaje</p>
                                 </a>
+
                                 <a href="unidad2_evaluacion.html" id="a3tutorialButton">
                                     <div class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                         id="a6tutorialButton">
                                         <i class="deskOption material-icons clbktx">quiz</i>
                                         <p class="deskOption clbktx">Evaluación</p>
                                     </div>
+                                </a>
+
+                                <a seccion-id="cierre"
+                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                    id="a5tutorialButton">
+                                    <i class="deskOption material-icons clbktx">diversity_2</i>
+                                    <p class="deskOption clbktx">Cierre</p>
+                                </a>
+
+                                <a class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                    id="a7tutorialButton" href="referencias.html">
+                                    <i class="deskOption material-icons clbktx">format_quote</i>
+                                    <p class="deskOption clbktx">Referencias</p>
+                                </a>
+
+                                <a class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                    id="a8tutorialButton" href="contacto.html">
+                                    <i class="deskOption material-icons clbktx">alternate_email</i>
+                                    <p class="deskOption clbktx">Contacto</p>
                                 </a>
                             </div>
                         </section>
