--- a/unidad3.html
+++ b/unidad3.html
@@ -44,8 +44,8 @@
     <!-- <script defer src="js/noCopy.js"></script> -->
 
     <!--Script para la carga de los contenidos-->
-    <script defer src="js/cargaContenidos/unidad3.js"></script>
     <script defer src="js/cargaContenidos/tabsPositioning.js"></script>
+    <script defer src="js/cargaContenidos/unidad3.js"></script>
 
     <!--Tutorial interactivo-->
     <script defer src="js/driver.min.js"></script>
@@ -107,20 +107,18 @@
                         style="background-color: #8470B3;">
                         <section id="lateralUnityMenu" class="lateralUnityMenu clw">
                             <div id="lateralUnityMenuSectionContainer" class="lateralUnityMenuSectionContainer">
-                                <a seccion-id="unidadCompetencia"
+                                <a seccion-id="inicio"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2 activeLinkOptionsContentUnit3"
                                     id="a1tutorialButton">
-                                    <i seccion-id="unidadCompetencia" class="deskOption material-icons clbktx">extension</i>
-                                    <p seccion-id="unidadCompetencia" class="deskOption clbktx">Unidad de competencia</p>
+                                    <i class="deskOption material-icons clbktx">school</i>
+                                    <p class="deskOption clbktx">Inicio</p>
                                 </a>
 
-                                <a seccion-id="evaluacionAprendizajes"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
-                                    id="a3tutorialButton">
-                                    <i seccion-id="evaluacionAprendizajes" class="deskOption material-icons clbktx">assessment</i>
-                                    <p seccion-id="evaluacionAprendizajes" class="deskOption clbktx">Evaluación de los aprendizajes</p>
+                                <a class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                    id="a10tutorialButton" href="manual.html">
+                                    <i class="deskOption material-icons clbktx">sos</i>
+                                    <p class="deskOption clbktx">Manual de usuario</p>
                                 </a>
-                                
 
                                 <ul id="a2tutorialButton" class="collapsible clgreyl2 border1 shadow2">
                                     <li>
@@ -150,7 +148,6 @@
                                             <a seccion-id="actividadesAnalisis"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 secondarySectionMenu leftBorderSecondaryUnit3">
                                                 3.2.1 Actividades para el análisis de requerimientos y diseño de la arquitectura del software 
- 
                                             </a>
                                             <a seccion-id="actividadesProgramacion"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit3 secondarySectionMenu leftBorderSecondaryUnit3">
@@ -176,31 +173,51 @@
                                     </li>
                                 </ul>
 
-
-                                <a seccion-id=""
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                <a class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a9tutorialButton" href="SuperGlosario.html">
-                                    <i seccion-id="" class="deskOption material-icons clbktx">library_books</i>
-                                    <p seccion-id="" class="deskOption clbktx">Glosario</p>
+                                    <i class="deskOption material-icons clbktx">library_books</i>
+                                    <p class="deskOption clbktx">Glosario</p>
                                 </a>
+
                                 <a seccion-id="materialApoyo"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a3tutorialButton">
-                                    <i seccion-id="materialApoyo" class="deskOption material-icons clbktx">auto_stories</i>
-                                    <p seccion-id="materialApoyo" class="deskOption clbktx">Material de apoyo</p>
+                                    <i class="deskOption material-icons clbktx">auto_stories</i>
+                                    <p class="deskOption clbktx">Material de apoyo</p>
                                 </a>
+
                                 <a seccion-id="actividades"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a4tutorialButton">
-                                    <i seccion-id="actividades" class="deskOption material-icons clbktx">fitness_center</i>
-                                    <p seccion-id="actividades" class="deskOption clbktx">Actividades de aprendizaje</p>
+                                    <i class="deskOption material-icons clbktx">fitness_center</i>
+                                    <p class="deskOption clbktx">Actividades de aprendizaje</p>
                                 </a>
+
                                 <a href="unidad3_evaluacion.html" id="a3tutorialButton">
                                     <div class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                         id="a6tutorialButton">
                                         <i class="deskOption material-icons clbktx">quiz</i>
                                         <p class="deskOption clbktx">Evaluación</p>
                                     </div>
+                                </a>
+
+                                <a seccion-id="cierre"
+                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                    id="a5tutorialButton">
+                                    <i class="deskOption material-icons clbktx">diversity_2</i>
+                                    <p class="deskOption clbktx">Cierre</p>
+                                </a>
+
+                                <a class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                    id="a7tutorialButton" href="referencias.html">
+                                    <i class="deskOption material-icons clbktx">format_quote</i>
+                                    <p class="deskOption clbktx">Referencias</p>
+                                </a>
+
+                                <a class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                    id="a8tutorialButton" href="contacto.html">
+                                    <i class="deskOption material-icons clbktx">alternate_email</i>
+                                    <p class="deskOption clbktx">Contacto</p>
                                 </a>
                             </div>
                         </section>
@@ -214,42 +231,90 @@
             <p class="textoTitulo white-text lateralMenuAdjustTextTitle">Secciones</p>
 
             <div class="mobileOptionsContainer">
-                <li><a seccion-id="unidadCompetencia" class="mobileOption clbktx textoStandar clw border0">
-                    <i class="material-icons clbktx mobileOption" seccion-id="unidadCompetencia">extension</i>Unidad de competencia</a>
+                <li><a seccion-id="inicio" class="mobileOption clbktx textoStandar clw border0">
+                    <i class="material-icons clbktx mobileOption" seccion-id="inicio">school</i>Inicio</a>
                 </li>
 
-                <li><a seccion-id="evaluacionAprendizajes" class="mobileOption clbktx textoStandar clw border0">
-                    <i class="material-icons clbktx mobileOption" seccion-id="evaluacionAprendizajes">assessment</i>Evaluación de los aprendizajes</a>
-                </li>
+                <li class="mobileOption navOptionsContentMobileMenu"><a
+                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="manual.html"><i
+                            class="material-icons clbktx">sos</i>Manual de usuario</a></li>
 
-                <li><a seccion-id="introduccion" class="mobileOption clbktx textoStandar clw border0">Introducción</a></li>
+                <div class="mobileOptionsContainer containerSectionLateralMobileMenu clgreyl1 border0">
+                    <div class="truncate waves-effect clbktx clgreyl2 titleSectionMobileMenu" id="segundaSeccion"><i
+                            class="material-icons" id="segundaSeccionIcon">expand_more</i><b>Contenidos</b>
+                    </div>
+                    <p seccion-id="introduccion"
+                        class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
+                        Introducción</p>
 
-                <li><a seccion-id="planGestion" class="mobileOption clbktx textoStandar clw border0">3.1 Plan de gestión para la dirección del proyecto</a></li>
-                <li><a seccion-id="gestionIntegracion" class="mobileOption clbktx textoStandar clw border0">3.1.1 Gestión de Integración del proyecto</a></li>
-                <li><a seccion-id="gestionConocimiento" class="mobileOption clbktx textoStandar clw border0">3.1.2 Gestión del conocimiento</a></li>
-                <li><a seccion-id="planDesarrollo" class="mobileOption clbktx textoStandar clw border0">3.2 Plan de desarrollo del software</a></li>
-                <li><a seccion-id="actividadesAnalisis" class="mobileOption clbktx textoStandar clw border0">3.2.1 Actividades para el análisis de requerimientos y diseño</a></li>
-                <li><a seccion-id="actividadesProgramacion" class="mobileOption clbktx textoStandar clw border0">3.2.2 Actividades para la programación</a></li>
-                <li><a seccion-id="actividadesPruebas" class="mobileOption clbktx textoStandar clw border0">3.2.3 Actividades para las pruebas e implementación</a></li>
-                <li><a seccion-id="actividadesDespliegue" class="mobileOption clbktx textoStandar clw border0">3.2.4 Actividades para el despliegue y mantenimiento</a></li>
-                <li><a seccion-id="documentacion" class="mobileOption clbktx textoStandar clw border0">3.2.5 Documentación</a></li>
-                <li><a seccion-id="gestionSostenibilidad" class="mobileOption clbktx textoStandar clw border0">3.3 Gestión de sostenibilidad</a></li>
+                    <p seccion-id="planGestion"
+                        class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
+                        3.1 Plan de gestión para la dirección del proyecto</p>
 
-                <li><a seccion-id="" class="clbktx textoStandar clw border0" href="SuperGlosario.html">
-                    <i class="material-icons clbktx">library_books</i>Glosario</a>
-                </li>
+                    <p seccion-id="gestionIntegracion"
+                        class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
+                        3.1.1 Gestión de Integración del proyecto</p>
 
-                <li><a seccion-id="materialApoyo" class="mobileOption clbktx textoStandar clw border0">
-                    <i class="material-icons clbktx mobileOption" seccion-id="materialApoyo">auto_stories</i>Material de apoyo</a>
-                </li>
+                    <p seccion-id="gestionConocimiento"
+                        class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
+                        3.1.2 Gestión del conocimiento</p>
 
-                <li><a seccion-id="actividades" class="mobileOption clbktx textoStandar clw border0">
-                    <i class="material-icons clbktx mobileOption" seccion-id="actividades">fitness_center</i>Actividades de aprendizaje</a>
-                </li>
+                    <p seccion-id="planDesarrollo"
+                        class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
+                        3.2 Plan de desarrollo del software</p>
 
-                <li><a seccion-id="" class="clbktx textoStandar clw border0" href="unidad3_evaluacion.html">
-                    <i class="material-icons clbktx">quiz</i>Evaluación</a>
-                </li>
+                    <p seccion-id="actividadesAnalisis"
+                        class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
+                        3.2.1 Actividades para el análisis de requerimientos y diseño</p>
+
+                    <p seccion-id="actividadesProgramacion"
+                        class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
+                        3.2.2 Actividades para la programación</p>
+
+                    <p seccion-id="actividadesPruebas"
+                        class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
+                        3.2.3 Actividades para las pruebas e implementación</p>
+
+                    <p seccion-id="actividadesDespliegue"
+                        class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
+                        3.2.4 Actividades para el despliegue y mantenimiento</p>
+
+                    <p seccion-id="documentacion"
+                        class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
+                        3.2.5 Documentación</p>
+
+                    <p seccion-id="gestionSostenibilidad"
+                        class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
+                        3.3 Gestión de sostenibilidad</p>
+                </div>
+
+                <li class="mobileOption navOptionsContentMobileMenu"><a
+                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="SuperGlosario.html"><i
+                            class="material-icons clbktx">library_books</i>Glosario</a></li>
+
+                <li class="mobileOption navOptionsContentMobileMenu"><a seccion-id="materialApoyo"
+                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
+                            class="material-icons clbktx">auto_stories</i>Material de apoyo</a></li>
+
+                <li class="mobileOption navOptionsContentMobileMenu"><a seccion-id="actividades"
+                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
+                            class="material-icons clbktx">fitness_center</i>Actividades de aprendizaje</a></li>
+
+                <li class="mobileOption navOptionsContentMobileMenu"><a
+                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0"
+                        href="unidad3_evaluacion.html"><i class="material-icons clbktx">quiz</i>Evaluación</a></li>
+
+                <li class="mobileOption navOptionsContentMobileMenu"><a seccion-id="cierre"
+                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
+                            class="material-icons clbktx">diversity_2</i>Cierre</a></li>
+
+                <li class="mobileOption navOptionsContentMobileMenu"><a
+                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0"
+                        href="referencias.html"><i class="material-icons clbktx">format_quote</i>Referencias</a></li>
+
+                <li class="mobileOption navOptionsContentMobileMenu"><a
+                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="contacto.html"><i
+                            class="material-icons clbktx">alternate_email</i>Contacto</a></li>
             </div>
         </ul>
 
