--- a/unidad1.html
+++ b/unidad1.html
@@ -107,18 +107,17 @@
                         style="background-color: #5B8D74;">
                         <section id="lateralUnityMenu" class="lateralUnityMenu clw">
                             <div id="lateralUnityMenuSectionContainer" class="lateralUnityMenuSectionContainer">
-                                <!-- Unidad de competencia -->
-                                <a seccion-id="unidadCompetencia"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2">
-                                    <i seccion-id="unidadCompetencia" class="deskOption material-icons clbktx">extension</i>
-                                    <p seccion-id="unidadCompetencia" class="deskOption clbktx">Unidad de competencia</p>
+                                <a seccion-id="inicio"
+                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2 activeLinkOptionsContentUnit1"
+                                    id="a1tutorialButton">
+                                    <i class="deskOption material-icons clbktx">school</i>
+                                    <p class="deskOption clbktx">Inicio</p>
                                 </a>
-                                
-                                <!-- Evaluación de los aprendizajes -->
-                                <a seccion-id="evaluacionAprendizajes"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2">
-                                    <i seccion-id="evaluacionAprendizajes" class="deskOption material-icons clbktx">assessment</i>
-                                    <p seccion-id="evaluacionAprendizajes" class="deskOption clbktx">Evaluación de los aprendizajes</p>
+
+                                <a class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                    id="a10tutorialButton" href="manual.html">
+                                    <i class="deskOption material-icons clbktx">sos</i>
+                                    <p class="deskOption clbktx">Manual de usuario</p>
                                 </a>
 
                                 <ul id="a2tutorialButton" class="collapsible clgreyl2 border1 shadow2">
@@ -174,29 +173,51 @@
                                     </li>
                                 </ul>
 
-
-                                <a seccion-id=""
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                <a class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a9tutorialButton" href="SuperGlosario.html">
-                                    <i seccion-id="" class="deskOption material-icons clbktx">library_books</i>
-                                    <p seccion-id="" class="deskOption clbktx">Glosario</p>
+                                    <i class="deskOption material-icons clbktx">library_books</i>
+                                    <p class="deskOption clbktx">Glosario</p>
                                 </a>
+
                                 <a seccion-id="material_apoyo"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2">
-                                    <i seccion-id="material_apoyo" class="deskOption material-icons clbktx">auto_stories</i>
-                                    <p seccion-id="material_apoyo" class="deskOption clbktx">Material de apoyo</p>
+                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                    id="a3tutorialButton">
+                                    <i class="deskOption material-icons clbktx">auto_stories</i>
+                                    <p class="deskOption clbktx">Material de apoyo</p>
                                 </a>
+
                                 <a seccion-id="actividades_aprendizaje"
-                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2">
-                                    <i seccion-id="actividades_aprendizaje" class="deskOption material-icons clbktx">fitness_center</i>
-                                    <p seccion-id="actividades_aprendizaje" class="deskOption clbktx">Actividades de aprendizaje</p>
+                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                    id="a4tutorialButton">
+                                    <i class="deskOption material-icons clbktx">fitness_center</i>
+                                    <p class="deskOption clbktx">Actividades de aprendizaje</p>
                                 </a>
+
                                 <a href="unidad1_evaluacion.html" id="a3tutorialButton">
                                     <div class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                         id="a6tutorialButton">
                                         <i class="deskOption material-icons clbktx">quiz</i>
                                         <p class="deskOption clbktx">Evaluación</p>
                                     </div>
+                                </a>
+
+                                <a seccion-id="cierre"
+                                    class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                    id="a5tutorialButton">
+                                    <i class="deskOption material-icons clbktx">diversity_2</i>
+                                    <p class="deskOption clbktx">Cierre</p>
+                                </a>
+
+                                <a class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                    id="a7tutorialButton" href="referencias.html">
+                                    <i class="deskOption material-icons clbktx">format_quote</i>
+                                    <p class="deskOption clbktx">Referencias</p>
+                                </a>
+
+                                <a class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
+                                    id="a8tutorialButton" href="contacto.html">
+                                    <i class="deskOption material-icons clbktx">alternate_email</i>
+                                    <p class="deskOption clbktx">Contacto</p>
                                 </a>
                             </div>
                         </section>
@@ -210,96 +231,56 @@
             <p class="textoTitulo white-text lateralMenuAdjustTextTitle">Secciones</p>
 
             <!--Inicio al sitio-->
-            <li><a seccion-id="0" class="clbktx textoStandar clw border0 activeButtonTextLateral" href="unidad1.html"><i
-                        class="material-icons clbktx">looks_one</i>Inicio</a></li>
+            <li><a seccion-id="inicio" class="clbktx textoStandar clw border0 activeButtonTextLateral"><i
+                        class="material-icons clbktx">school</i>Inicio</a></li>
 
+            <!--Manual de usuario-->
+            <li class="mobileOption navOptionsContentMobileMenu"><a
+                    class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="manual.html"><i
+                        class="material-icons clbktx">sos</i>Manual de usuario</a></li>
 
-            <!--Primera seccion-->
-            <div class="mobileOptionsContainer containerSectionLateralMobileMenu clgreyl1 border0">
-                <div class="truncate waves-effect clbktx clgreyl2 titleSectionMobileMenu" id="primeraSeccion"><i
-                        class="material-icons" id="primeraSeccionIcon">expand_more</i><b>Introducción</b>
-                </div>
-
-                <p seccion-id="1"
-                    class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx primeraSeccionHide">
-                    Introducción al recurso y contenido</p>
-            </div>
-
-            <div class="mobileOptionsContainer">
-                <!--Pagina externa-->
-                <li seccion-id="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a seccion-id=""
-                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="manual.html"><i
-                            class="material-icons clbktx">sos</i>Manual de usuario</a></li>
-            </div>
-
-            <!--Segunda seccion-->
+            <!--Contenidos-->
             <div class="mobileOptionsContainer containerSectionLateralMobileMenu clgreyl1 border0">
                 <div class="truncate waves-effect clbktx clgreyl2 titleSectionMobileMenu" id="segundaSeccion"><i
-                        class="material-icons" id="segundaSeccionIcon">expand_more</i><b>1.1 La empresa</b>
+                        class="material-icons" id="segundaSeccionIcon">expand_more</i><b>Contenidos</b>
                 </div>
-                <p seccion-id="2"
-                    class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
-                    1.1 La empresa</p>
-
-                <p seccion-id="3"
-                    class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
-                    1.1.1 Constitución jurídica</p>
-                <p seccion-id="4"
-                    class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
-                    1.1.2 El área financiera en la estructura organizacional</p>
+                <!-- Contenidos existentes -->
             </div>
 
+            <!--Glosario-->
+            <li class="mobileOption navOptionsContentMobileMenu"><a
+                    class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="SuperGlosario.html"><i
+                        class="material-icons clbktx">library_books</i>Glosario</a></li>
 
+            <!--Material de apoyo-->
+            <li class="mobileOption navOptionsContentMobileMenu"><a seccion-id="material_apoyo"
+                    class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
+                        class="material-icons clbktx">auto_stories</i>Material de apoyo</a></li>
 
-            <div class="mobileOptionsContainer">
+            <!--Actividades de aprendizaje-->
+            <li class="mobileOption navOptionsContentMobileMenu"><a seccion-id="actividades_aprendizaje"
+                    class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
+                        class="material-icons clbktx">fitness_center</i>Actividades de aprendizaje</a></li>
 
-                <li seccion-id="5" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        seccion-id="5" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">1.2 Función y
-                        objetivo de las finanzas empresariales</a></li>
+            <!--Evaluación-->
+            <li class="mobileOption navOptionsContentMobileMenu"><a
+                    class="mobileOption clbktx textoStandar truncate clgreyl1 border0"
+                    href="unidad1_evaluacion.html"><i class="material-icons clbktx">quiz</i>Evaluación</a></li>
 
-                <li seccion-id="6" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        seccion-id="6" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">1.3 Las finanzas
-                        empresariales y su relación con otras disciplinas</a></li>
+            <!--Cierre-->
+            <li class="mobileOption navOptionsContentMobileMenu"><a seccion-id="cierre"
+                    class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
+                        class="material-icons clbktx">diversity_2</i>Cierre</a></li>
 
-                <li seccion-id="7" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        seccion-id="7" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">1.4 Factores del
-                        micro y macro ambiente que impactan a la empresa y a sus finanzas</a></li>
+            <!--Referencias-->
+            <li class="mobileOption navOptionsContentMobileMenu"><a
+                    class="mobileOption clbktx textoStandar truncate clgreyl1 border0"
+                    href="referencias.html"><i class="material-icons clbktx">format_quote</i>Referencias</a></li>
 
-                <!--Pagina externa-->
-                <li seccion-id="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a seccion-id=""
-                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="SuperGlosario.html"><i
-                            class="material-icons clbktx">library_books</i>Glosario</a></li>
-
-                <li seccion-id="8" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        seccion-id="8" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
-                            class="material-icons clbktx">auto_stories</i>Material de apoyo</a></li>
-
-                <li seccion-id="9" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        seccion-id="9" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
-                            class="material-icons clbktx">fitness_center</i>Actividades de aprendizaje</a></li>
-
-                <!--Pagina externa-->
-                <li seccion-id="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a seccion-id=""
-                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0"
-                        href="unidad1_evaluacion.html"><i class="material-icons clbktx">quiz</i>Evaluación</a></li>
-
-                <li seccion-id="10" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        seccion-id="10" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"><i
-                            class="material-icons clbktx">diversity_2</i>Cierre</a></li>
-
-
-                <li seccion-id="11" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a
-                        seccion-id="11" class="mobileOption clbktx textoStandar truncate clgreyl1 border0"
-                        href="referencias.html"><i class="material-icons clbktx">format_quote</i>Referencias</a></li>
-
-                <!--Pagina externa-->
-                <li seccion-id="" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu"><a seccion-id=""
-                        class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="contacto.html"><i
-                            class="material-icons clbktx">alternate_email</i>Contacto</a></li>
-
-
-
-            </div>
+            <!--Contacto-->
+            <li class="mobileOption navOptionsContentMobileMenu"><a
+                    class="mobileOption clbktx textoStandar truncate clgreyl1 border0" href="contacto.html"><i
+                        class="material-icons clbktx">alternate_email</i>Contacto</a></li>
         </ul>
 
         <!--Menu para la configuración de los textos-->
